--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "navi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "baishusama <baishusama@outlook.com> (http://baishusama.github.io/)",
-  "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-typescript": "^5.0.0-alpha.3",
-    "gulp-uglify": "^3.0.1",
-    "gulp-util": "^3.0.8",
-    "tsify": "^4.0.0",
-    "typescript": "^3.0.1",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.0"
-  }
+    "name": "navi",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./dist/main.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "gulp",
+        "serve": "gulp serve",
+        "dev": "concurrently --kill-others \"npm run watch\" \"npm run serve\""
+    },
+    "author": "baishusama <baishusama@outlook.com> (http://baishusama.github.io/)",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-preset-es2015": "^6.24.1",
+        "babelify": "^8.0.0",
+        "browser-sync": "^2.24.7",
+        "browserify": "^16.2.2",
+        "concurrently": "^4.0.1",
+        "gulp": "^3.9.1",
+        "gulp-sass": "^4.0.1",
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-typescript": "^5.0.0-alpha.3",
+        "gulp-uglify": "^3.0.1",
+        "gulp-util": "^3.0.8",
+        "tsify": "^4.0.0",
+        "typescript": "^3.0.1",
+        "vinyl-buffer": "^1.0.1",
+        "vinyl-source-stream": "^2.0.0",
+        "watchify": "^3.11.0"
+    }
 }
