--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "author": "baishusama <baishusama@outlook.com> (http://baishusama.github.io/)",
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+        "d3": "^5.7.0"
+    },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-preset-es2015": "^6.24.1",
