--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "author": "baishusama <baishusama@outlook.com> (http://baishusama.github.io/)",
     "license": "ISC",
     "dependencies": {
-        "d3": "^5.7.0"
+        "d3": "^5.7.0",
+        "lodash": "^4.17.10"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
